start and personal siteplan

--- a/sight-plan.html
+++ b/sight-plan.html
@@ -9,9 +9,8 @@
 
   <body>
     <header>
-      <h1>[Site name] Site Plan</h1>
-      <h2>FirstName LastName</h2>
-      <h2>WDD 130-[section]</h2>
+      <h1>Hour-watch Site Plan</h1>
+      <h2>Mel Vickery</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
     <main>
@@ -20,11 +19,11 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>[Your purpose here]</p>  <!-- change this -->
+      <p>To score and visualize the efficiency of team members. A tool to form good teams to Increase unity, and hasten work</p>  <!-- change this -->
 
 
       <h3>Audience</h3>
-      <p>[Your audience here]</p>  <!-- change this -->
+      <p>Manager of multiple teams or groups, or team mebers to promote healthy compatition</p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
