--- a/sight-plan.html
+++ b/sight-plan.html
@@ -29,7 +29,7 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="#" alt="Logo image">
+      <img src="images/hour-watch-favicon-black.png" alt="Logo image">
       <hr>
       <h2>
         Style Guide
@@ -39,7 +39,7 @@
 
       <h3>
         Color Palette
-      </h3>
+        </h3>
       <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in iLearn. You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
 
       <table class="colors">
